# pammap

./: .clang-format  .clang-format.ignore  .clang-tidy  .clang-tidy.ignore  .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md  setup.cfg
ci/jobs/: code_style.sh  compile_test.sh
cmake/: CheckCxxAbi.cmake  CheckCxxFeatures.cmake  SetupCompiler.cmake
examples/: CMakeLists.txt
examples/minimal/: CMakeLists.txt  caller.py  testmodule.cpp  testmodule.hpp  testmodule.i
examples/potential/: CMakeLists.txt  potential.cpp  potential.hpp  potential.i
pammap/: CMakeLists.txt  DataBlock.cpp  DataBlock.hpp  DataBlock.instantiation.hxx  IsSupportedType.hxx  PamMap.hpp  PamMapAccessor.hpp  PamMapValue.hpp  any.hpp  common.py  constants.py  demangle.cpp  demangle.hpp  generate_all.sh  generate_dtype_code.py  pammap.hpp  typedefs.hxx
pammap/core/: ArrayView.cpp  ArrayView.cxx  ArrayView.cxx.generate.py  ArrayView.hpp  ArrayView.i  ArrayView.i.generate.py  ArrayView.i.template  ArrayView.instantiation.hxx  ArrayView.instantiation.hxx.generate.py  CMakeLists.txt  DataBlock.cpp  DataBlock.hpp  DataBlock.i  IsSupportedType.hxx  IsSupportedType.hxx.generate.py  PamMap.cpp  PamMap.hpp  PamMap.i  PamMap.instantiation.hxx  PamMap.instantiation.hxx.generate.py  PamMapAccessor.hpp  PamMapError.cpp  PamMapError.hpp  PamMapInterface.hxx  PamMapInterface.i  PamMapIterator.hpp  PamMapValue.cpp  PamMapValue.hpp  PamMapValue.hxx  PamMapValue.hxx.generate.py  Slice.cpp  Slice.hpp  any.hpp  common.py  config.hpp.in  core.hpp  demangle.cpp  exceptions.cpp  exceptions.hpp  generate.sh  (+7 more)
pammap/core/templates/: DataBlock.i.template  PamMap.i.template
pammap/core/tests/: ArrayViewTests.cpp  CMakeLists.txt  PamMapTests.cpp  SliceTests.cpp  main.cpp  test.cpp
pammap/python/: ArrayView.i  ArrayView.i.generate.py  ArrayView.i.template  CMakeLists.txt  PamMap.i  PamMap.i.generate.py  PamMapPython.cmake  constants.py  pammap_exceptions.i
pammap/python/pammap/: PamMap.py
pammap/python/tests/: CMakeLists.txt  swiginterface.cpp  swiginterface.hpp  swiginterface.i  test_swiginterface.py
scripts/: common.py  run-clang-format.py  run-clang-tidy.py
tests/: CMakeLists.txt  main.cpp  test.cpp
