## ---------------------------------------------------------------------
##
## Copyright (C) 2018 by Michael F. Herbst and contributors
##
## This file is part of pammap.
##
## pammap is free software: you can redistribute it and/or modify
## it under the terms of the GNU Lesser General Public License as published
## by the Free Software Foundation, either version 3 of the License, or
## (at your option) any later version.
##
## pammap is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU Lesser General Public License for more details.
##
## You should have received a copy of the GNU Lesser General Public License
## along with pammap. If not, see <http://www.gnu.org/licenses/>.
##
## ---------------------------------------------------------------------

# C++ sourle files in the repository
set(PAMMAP_SOURCES
	ArrayView.cxx
	PamMap.cpp
	PamMapError.cpp
	PamMapValue.cpp
	demangle.cpp
	exceptions.cpp
)

# Build the C++ library
include_directories("${PROJECT_SOURCE_DIR}")
add_library(pammap ${PAMMAP_SOURCES})
set_target_properties(pammap PROPERTIES VERSION "${PROJECT_VERSION}")

# Download the numpy.i module we require from github
file(DOWNLOAD https://raw.githubusercontent.com/numpy/numpy/v1.13.1/tools/swig/numpy.i
	${CMAKE_CURRENT_BINARY_DIR}/numpy.i
	EXPECTED_HASH
	SHA256=bc658c3e9f4ecc5343041339c0697314398fd7cd0e442aa2d424b71086e305ec
)
